[gd_scene load_steps=5 format=3 uid="uid://c0pigba0ihfvs"]

[ext_resource type="Script" uid="uid://btxtc8h4my7xj" path="res://objects/Player/player.gd" id="1_fwodp"]
[ext_resource type="Texture2D" uid="uid://drkij5rd4qwh6" path="res://assets/images/Spider/spider_body.png" id="2_76bfe"]
[ext_resource type="Script" uid="uid://ckdrfipawwquh" path="res://objects/Node Simulation/sim_root.gd" id="3_8e3mr"]
[ext_resource type="Script" uid="uid://dftxhty2hpwup" path="res://objects/Node Simulation/sim_node.gd" id="4_sp50d"]

[node name="Player" type="Node2D"]
script = ExtResource("1_fwodp")

[node name="SpiderBody" type="Sprite2D" parent="."]
texture = ExtResource("2_76bfe")

[node name="SimRoot" type="Node2D" parent="."]
script = ExtResource("3_8e3mr")
draw_distance_constraint = 2
metadata/_custom_type_script = "uid://ckdrfipawwquh"

[node name="LegRightNear1" type="Node2D" parent="SimRoot"]
top_level = true
position = Vector2(77, 47)
script = ExtResource("4_sp50d")
is_anchored = true
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegRightNear2" type="Node2D" parent="SimRoot/LegRightNear1"]
top_level = true
position = Vector2(76.02913, 46.76039)
script = ExtResource("4_sp50d")
distance_range = Vector2(1, 1)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegRightNear3" type="Node2D" parent="SimRoot/LegRightNear1/LegRightNear2"]
top_level = true
position = Vector2(42.26679, 37.535194)
script = ExtResource("4_sp50d")
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegRightNear4" type="Node2D" parent="SimRoot/LegRightNear1/LegRightNear2/LegRightNear3"]
top_level = true
position = Vector2(22, 9)
script = ExtResource("4_sp50d")
is_anchored = true
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegRightFar1" type="Node2D" parent="SimRoot"]
top_level = true
position = Vector2(20, -10)
script = ExtResource("4_sp50d")
is_anchored = true
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegRightFar2" type="Node2D" parent="SimRoot/LegRightFar1"]
top_level = true
position = Vector2(49.67444, -28.558764)
script = ExtResource("4_sp50d")
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegRightFar3" type="Node2D" parent="SimRoot/LegRightFar1/LegRightFar2"]
top_level = true
position = Vector2(78, -8)
script = ExtResource("4_sp50d")
is_anchored = true
distance_range = Vector2(35, 35)
target_angle = 0.5
angle_sway = 0.5
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegLeftFar1" type="Node2D" parent="SimRoot"]
top_level = true
position = Vector2(-20, -10)
script = ExtResource("4_sp50d")
is_anchored = true
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegLeftFar2" type="Node2D" parent="SimRoot/LegLeftFar1"]
top_level = true
position = Vector2(-54.996803, -9.527044)
script = ExtResource("4_sp50d")
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegLeftFar3" type="Node2D" parent="SimRoot/LegLeftFar1/LegLeftFar2"]
top_level = true
position = Vector2(-94, -8.999957)
script = ExtResource("4_sp50d")
is_anchored = true
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegLeftNear1" type="Node2D" parent="SimRoot"]
top_level = true
position = Vector2(-20, 10)
script = ExtResource("4_sp50d")
is_anchored = true
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegLeftNear2" type="Node2D" parent="SimRoot/LegLeftNear1"]
top_level = true
position = Vector2(-54.996803, 10.472956)
script = ExtResource("4_sp50d")
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"

[node name="LegLeftNear3" type="Node2D" parent="SimRoot/LegLeftNear1/LegLeftNear2"]
top_level = true
position = Vector2(-94, 11.000043)
script = ExtResource("4_sp50d")
is_anchored = true
distance_range = Vector2(35, 35)
metadata/_custom_type_script = "uid://dftxhty2hpwup"
